validation types DTO (Gin)
